Add support for snappy compression

--- a/package.json
+++ b/package.json
@@ -475,7 +475,8 @@
         "glob": "^7.1.6",
         "handlebars": "^4.7.3",
         "js-yaml": "^3.14.0",
-        "kafkajs": "^1.15.0"
+        "kafkajs": "^1.15.0",
+        "kafkajs-snappy": "^1.1.0"
     },
     "devDependencies": {
         "@types/faker": "^5.1.5",
